<resources>
    <string name="app_name">Don\'t Stop</string>

    <string name="facebook_app_id">2111199192499839</string>
    <string name="fb_login_protocol_scheme">fb2111199192499839</string>

    <string name="or">OR</string>

    <string name="login">Log In Your Account</string>

    <string name="visitor">Continue As Visitor</string>
    <string name="facebook">LogIn With FaceBook</string>
    <string name="google">LogIn With Google</string>
    <string name="height">Enter Your Height(cm)</string>
    <string name="weight">Enter Your Weight(kg)</string>
    <string name="dob">Press to show calendar</string>
    <string name="eg_170_8">eg. 170.8</string>
    <string name="eg_56_2">eg. 56.2</string>
    <string name="next">Next</string>
    <string name="frequency">3 times workout/week</string>
    <string name="time">1 hour walk/day</string>
    <string name="step">1w Step/day</string>
    <string name="set_goals">Set Goals</string>
    <string name="customize_your_goal">Customize Your Goal</string>
    <string name="skip">Skip</string>
    <string name="choose">Set Details for Your Goal</string>
    <string name="ok">OK</string>
    <string name="stepTarget">Step Target for Everyday</string>

    <string-array name="goalType">
        <item>Step Goal</item>
        <item>Activated Time Goal</item>
        <item>Workout Frequency Goal</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="running_history">Running History</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>

    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="ispaused">Don\'t Stop is paused</string>
    <string name="notification_title">Don\'t Stop is counting</string>
    <string name="your_weight">Your Weight, Height</string>
    <string name="your_bmi">Your BMI</string>
    <string name="current_weight">Current Weight</string>
    <string name="current_height">Current Height</string>
    <string name="current_bmi">Current BMI</string>
    <string name="bmi_status">Current Status</string>
    <string name="title_activity_new_home">NewHomeActivity</string>
    <string name="home">Home</string>
    <string name="select_your_birthday">Select your Birthday</string>
    <string name="_10000_steps_a_day">10000 Steps a Day</string>
    <string name="monday">Mon</string>
    <string name="Tuesday">Tuesday</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="refresh">Refresh</string>
    <string name="_00_00">00:00</string>
    <string name="km">KM</string>
    <string name="mins">Mins</string>
    <string name="pause">Pause</string>
    <string name="continueString">Continue</string>
    <string name="finishString">Finish</string>
    <string name="_0_00">0.00</string>
    <string name="start_running">Start Running</string>


</resources>
