<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_start_running"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/start_running" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/running_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_Login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/log_in" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/log_out" />

    </group>


</menu>
