<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.edu.rp.c346.dontstop.RecordingActivity"
    android:weightSum="10"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_weight="9"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:rowCount="2"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        tools:ignore="UselessParent"
        android:id="@+id/gridLayout">


        <!--Time-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_margin="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTime"
                    android:text="@string/_00_00"
                    android:textSize="64sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvMins"
                    android:text="@string/mins"
                    android:textSize="32sp"
                    android:textColor="#424242"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginBottom="16dp"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <!--Distance-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_margin="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDistance"
                    android:text="@string/_0_00"
                    android:textSize="64sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvKM"
                    android:text="@string/km"
                    android:textSize="36sp"
                    android:textColor="#424242"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginBottom="16dp"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:textSize="24sp"
            android:textStyle="normal"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueString"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnFinish"
            android:layout_marginStart="16dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishString"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="48dp"
            android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>



</LinearLayout>
